[project]
name = "zamboni"
authors = []
description = "Library for working with PSO2 ICE files"
requires-python = ">= 3.10"
license = { text = "MIT" }

dependencies = ['pycryptodome>=3.18.0', 'numpy>=1.23.5']
dynamic = ["version", "readme"]

[project.scripts]
zamboni = "zamboni.cli:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["zamboni"]

[tool.setuptools_scm]
write_to = "zamboni/_version.py"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
